chore(Junit6): Make JUnit5 a shell around JUnit6
Signed-off-by: l-1squared <30831153+l-1squared@users.noreply.github.com>